MULE-12820: Upgrade JRuby to 9.1.14.0 - increment MaxPermSize in scripting tests
(cherry picked from commit b3c992f5badc1daffcf5b5c371e0b666789a4fda)